[project]
name = "google-calendar-mcp"
version = "0.1.0"
description = "An MCP server to interact with Google Calendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.166.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "mcp[cli]>=1.6.0",
]
